Norma trial run

--- a/collections/folders.conf
+++ b/collections/folders.conf
@@ -1,6 +1,1 @@
-{
-  "title" : "Folder",
-  "folder": true,
-  "addText": "Add Page",
-  "icon" : "folder"
-}
+{ "title" : "Folder", "folder": true, "addText": "Add Page", "icon" : "folder" }
