--- a/collections/blog.conf
+++ b/collections/blog.conf
@@ -1,6 +1,1 @@
-{
-  "title" : "Blog",
-  "ordering" : "chronological",
-  "addText" : "Add Post",
-  "acceptTypes": ["text"]
-}
+{ "title" : "Blog", "ordering" : "chronological", "addText" : "Add Post", "acceptTypes": ["text"] }
