--- a/collections/folders.conf
+++ b/collections/folders.conf
@@ -1,1 +1,6 @@
-{ "title" : "Folder", "folder": true, "addText": "Add Page", "icon" : "folder" }
+{
+  "title" : "Folder",
+  "folder": true,
+  "addText": "Add Page",
+  "icon" : "folder"
+}
