--- a/template.conf
+++ b/template.conf
@@ -25,8 +25,8 @@
 
   "customTypes": [
     {
-      "title": "Case Study",
-      "name": "case-study",
+      "title": "Blog",
+      "name": "blog",
       "base": "text",
       "fields": [
         {
